Fix Results image overflow

--- a/src/features/results/Results.css
+++ b/src/features/results/Results.css
@@ -88,7 +88,8 @@
 .result-img {
     width: auto;
     height: auto;
-    max-height: 60vh;
+    max-width: 100%;
+    max-height: 50vh;
 }
 
 .button-div {
